Fixed bugs in matrix display and highlight box timing
- Set matrix to be initially hidden
- Adjusted highlight box positions, no longer affected by scrollbar
- Corrected timing to be synced with animated frame motion

--- a/src/components/AnimationPanel/HighlightBox.module.css
+++ b/src/components/AnimationPanel/HighlightBox.module.css
@@ -12,5 +12,5 @@
 }
 
 .params {
-  width: 70px;
+  width: 76px;
 }
