--- a/src/components/CoordFrame/MatrixOverlay.module.css
+++ b/src/components/CoordFrame/MatrixOverlay.module.css
@@ -6,6 +6,7 @@
   text-align: left;
   background: #202035;
   color: white;
+  opacity: 0;
   padding: 10px 10px;
   border: 1px solid grey;
   border-radius: 8px;
